[package]
name = "dchunked"
version = "0.1.1"
edition = "2021"
description = "Chunked HTTP downloader with SOCKS5 proxy pool support"
license = "MIT"

[[bin]]
name = "dchunked"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["socks", "rustls-tls", "stream"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
indicatif = "0.17"
thiserror = "2"
anyhow = "1"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }

[package.metadata.deb]
maintainer = "bevin1984 <bevin1984@gmail.com>"
copyright = "2026, bevin1984"
depends = []
assets = [
    { source = "target/release/dchunked", dest = "usr/bin/dchunked", mode = "755" },
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/dchunked", dest = "/usr/bin/dchunked", mode = "755" },
]
